进程保活知识

--- a/Android/components/进程保活.md
+++ b/Android/components/进程保活.md
@@ -72,7 +72,7 @@
 
 ### 内存阈值
 
-　　系统出于体验和性能上的考虑，app 在退到后台时系统并不会真正的 kill 掉这个进程，而是将其缓存起来。打开的应用越多，后台缓存的进程也越多。在系统内存不足的情况下，系统开始依据自身的一套进程回收机制来判断要 kill 掉哪些进程，以腾出内存来供给需要的 app，这套杀进程的机制就叫 Low Memory Killer。
+　　系统出于体验和性能上的考虑，app 在退到后台时系统并不会真正的 kill 掉这个进程，而是将其缓存起来。打开的应用越多，后台缓存的进程也越多。在系统内存不足的情况下，系统开始依据自身的一套进程回收机制来判断要 kill 掉哪些进程，以腾出内存来供给需要的 app，这套杀进程的机制就叫 Low Memory Killer，它是基于 Linux 内核的 OOM Killer(Out-Of-Memory killer) 机制诞生。
 
 　　那这个不足怎么来规定呢？那就是内存阈值。
 
@@ -84,7 +84,10 @@
 
 　　如果内存不足了，先会将空进程全部杀光，如果内存还不足，就要杀后台进程。
 
-　　进程是有它的优先级的，这个优先级通过进程的 adj 值来反映，它是 linux 内核分配给每个系统进程的一个值，代表进程的优先级，进程回收机制就是根据这个优先级来决定是否进行回收，adj 值定义在 com.android.server.am.ProcessList 类中，这个类路径是 ${android-sdk-path}\sources\android23\com\android\server\am\ProcessList.java 。oom_adj 的值越小，进程的优先级越高，普通进程 oom_adj 值是大于等于 0 的，而系统进程 oom_adj 的值是小于 0 的，可以通过 cat /proc/进程 id/oom_adj 可以看到当前进程的 adj 值。
+　　进程是有它的优先级的，这个优先级通过进程的 oom_adj 值来反映，它是 linux 内核分配给每个系统进程的一个值，代表进程的优先级，进程回收机制就是根据这个优先级来决定是否进行回收，99m_adj 值定义在 com.android.server.am.ProcessList 类中，这个类路径是 ${android-sdk-path}\sources\android23\com\android\server\am\ProcessList.java 。可以通过 cat /proc/进程 id/oom_adj 可以看到当前进程的 adj 值。
+
+1. oom_adj 的值越小，表示进程的优先级越高，越不容易被杀死回收，oom_adj 的值越大，表示进程的优先级有低，越容易被杀死回收。
+2. 普通进程 oom_adj 值是大于等于 0 的，而系统进程 oom_adj 的值是小于 0 的.
 
 ![](image/查看当前进程的adj值.png)
 
@@ -117,6 +120,8 @@
 
 　　根据上面的 adj 值，系统会进程回收就是：oom_adj 越大，占用物理内存越多会被最先 kill 掉。所以对于进程如何保活也就是如何降低 oom_adj 的值，以及如何使得应用占的内存最少。
 
+　　app 推导后台时，其所有的进程优先级都会降低。但是 UI 进程是降低最为明显的，因为它占用的内存资源最多，系统内存不足的时候肯定优先先杀这些占用内存高的进程来腾出资源。所以，为了尽量避免后台 UI 进程被杀，需要尽可能地释放一些不用地资源，尤其是图片、音视频之类的。
+
 ## 进程保活方案
 
 　　当前业界的 Andriod 进程保活手段主要分为 **黑**、**白**、**灰**三种，其大致的实现思路如下：
@@ -139,7 +144,23 @@
 
 　　而开机广播，有一些定制 ROM 的厂商会将其去掉。
 
+### 白色保活
 
+　　白色保活手段非常简单，就是调用系统 api 启动一个前台的 Service 进程，这样会在系统的通知栏生成一个 Notification，用来让用户知道有这样一个 app 在运行着，哪怕当前的 app 推到了后台。
+
+　　比如 LBE 和 QQ 音乐就是这样。
+
+### 灰色保活
+
+　　灰色保活，这种保活手段是应用范围最广泛。
+
+　　它是利用系统的漏洞来启动一个前台的 Service 进程，与普通的启动方式区别在于，它不会在系统通知栏处出现一个 Notification，看起来就如同运行着一个后台 Service 进程一样。这样做带来的好处就是，用户无法察觉到你运行着一个前台进程（因为看不到 Notification），但你的进程优先级又是高于普通后台进程的。那么如何i利用系统的漏洞呢？大致的实现思路如下：
+
+1. 思路一： API level < 18，启动前台 Service 时直接传入 new Notification。
+
+2.  思路二：API level >= 18，同时启动两个 id 相同的前台 Service，然后再将后启动的 Service 做 stop 处理。。
+
+　　使用灰色保活并不代表 Service 就永久不死了，只能说时提高了进程的优先级。如果 app 进程占用了大量的内存，按照回收进程的策略，同样会干掉 app。
 
 
 
@@ -147,11 +168,379 @@
 
 　　基本思想：系统一般是不会杀死前台进程的，所以要使得进程常驻，只需要在锁屏的时候在本进程开启一个 Activity，为了欺骗用户，让这个 Activity 的大小是 1 像素，并且透明无切换动画，在开屏幕的时候，把这个 Activity 关闭掉，所以这个就需要监听系统锁屏广播。
 
+#### 1.1.代码实现
+
+　　一像素的 Activity：
+
+```java
+public class LiveActivity extends Activity {
+    public static final String TAG = LiveActivity.class.getSimpleName();
+
+    public static void actionToLiveActivity(Context context) {
+        Intent intent = new Intent(context, LiveActivity.class);
+        intent.setFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+        context.startActivity(intent);
+    }
+
+    @Override
+    protected void onCreate(@Nullable Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        Log.d(TAG, "onCreate");
+        setContentView(R.layout.activity_main);
+
+        Window window = getWindow();
+        // 放在左上角
+        window.setGravity(Gravity.START | Gravity.TOP);
+        WindowManager.LayoutParams lp = window.getAttributes();
+        // 宽高设计为 1 个像素
+        lp.width = 1;
+        lp.height = 1;
+        // 起始坐标
+        lp.x = 0;
+        lp.y = 0;
+        window.setAttributes(lp);
+
+        ScreenManager.getInstance(this).setActivity(this);
+    }
+
+    @Override
+    protected void onDestroy() {
+        super.onDestroy();
+        Log.d(TAG, "onDestroy");
+    }
+}
+```
+
+　　一像素 Activity 的主题:
+
+```xml
+    <style name="LiveStyle">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowAnimationStyle">@null</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+```
+
+　　管理一像素 Activity：
+
+```java
+public class ScreenManager {
+
+    private Context mContext;
+
+    private WeakReference<Activity> mActivityWref;
+
+    public static ScreenManager gDefualt;
+
+    public static ScreenManager getInstance(Context context){
+        if (gDefualt == null){
+            gDefualt = new ScreenManager(context.getApplicationContext());
+        }
+        return gDefualt;
+    }
+
+    private ScreenManager(Context context){
+        this.mContext = context;
+    }
+
+    public void setActivity(Activity activity){
+        mActivityWref = new WeakReference<>(activity);
+    }
+
+    public void startActivity(){
+        LiveActivity.actionToLiveActivity(mContext);
+    }
+
+    public void finishActivity(){
+        // 结束掉 LiveActivity
+        if(mActivityWref != null){
+            Activity activity = mActivityWref.get();
+            if (activity != null){
+                activity.finish();
+            }
+        }
+    }
+}
+```
+
+　　屏保与亮屏的广播监听：
+
+```java
+public class ScreenBroadcastListener {
+
+    private static final String TAG = ScreenBroadcastListener.class.getSimpleName();
+
+    private Context mContext;
+    private ScrrenBroadcastReceiver mScreenReceiver;
+
+    private ScreenStateListener mListener;
+
+    public ScreenBroadcastListener(Context context) {
+        mContext = context.getApplicationContext();
+        mScreenReceiver = new ScrrenBroadcastReceiver();
+    }
+
+    interface ScreenStateListener {
+        void onScreenOn();
+
+        void onScreenOff();
+    }
+
+    private class ScrrenBroadcastReceiver extends BroadcastReceiver {
+        private String action = null;
+
+        @Override
+        public void onReceive(Context context, Intent intent) {
+            action = intent.getAction();
+            Log.d(TAG, "onReceive action:" + action);
+            if (Intent.ACTION_SCREEN_ON.equals(action)) { // 开屏
+                if (mListener != null) {
+                    mListener.onScreenOn();
+                }
+            } else if (Intent.ACTION_SCREEN_OFF.equals(action)) { // 锁屏
+                if (mListener != null) {
+                    mListener.onScreenOff();
+                }
+            }
+        }
+    }
+
+    public void registerListener(ScreenStateListener listener) {
+        mListener = listener;
+        registerListener();
+    }
+
+    private void registerListener() {
+        IntentFilter filter = new IntentFilter();
+        filter.addAction(Intent.ACTION_SCREEN_ON);
+        filter.addAction(Intent.ACTION_SCREEN_OFF);
+        mContext.registerReceiver(mScreenReceiver, filter);
+    }
+}
+```
+
+　　主 Mactivity：在 onCreate 注册监听屏保和亮屏的广播：
+
+```java
+public class MainActivity extends AppCompatActivity {
+
+    private LiveService service;
+
+    @Override
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        setContentView(R.layout.activity_main);
+        final ScreenManager screenManager = ScreenManager.getInstance(this);
+        ScreenBroadcastListener listener = new ScreenBroadcastListener(this);
+        // 注册监听屏保和亮屏的广播
+        listener.registerListener(new ScreenBroadcastListener.ScreenStateListener() {
+            @Override
+            public void onScreenOn() {
+                // 亮屏时，关闭 LiveActivity
+                screenManager.finishActivity();
+            }
+
+            @Override
+            public void onScreenOff() {
+                // 屏保时，开启 LiveActivity
+                screenManager.startActivity();
+            }
+        });
+    }
+
+    @Override
+    protected void onDestroy() {
+        super.onDestroy();
+    }
+}
+```
+
+#### 1.2. 查看优先级
+
+![](image/1像素线程保活.png)
+
+　　可以看到在屏保后，进程的优先级有所提升。
+
+#### 1.3. 优化
+
+　　内存越多会被最先 kill 掉，为了减少主程序的内存，可以将打开和关闭 1 像素的 Activity 放到一个服务 Service 中去，而 Service 可以在另外一个进程中运行，在 MainActivity 中开启和关闭这个 Service 就可以了，这样主程序的进程就会更加的轻量。
+
+```java
+public class LiveService extends Service {
+
+    public static void toLiveService(Context context){
+        Intent intent = new Intent(context,LiveService.class);
+        context.startService(intent);
+    }
+
+    @Nullable
+    @Override
+    public IBinder onBind(Intent intent) {
+        return null;
+    }
+
+    @Override
+    public int onStartCommand(Intent intent, int flags, int startId) {
+        //屏幕关闭的时候启动一个 1 像素的 Activity，开屏的时候关闭 Activity
+        final ScreenManager screenManager = ScreenManager.getInstance(this);
+        ScreenBroadcastListener listener = new ScreenBroadcastListener(this);
+        listener.registerListener(new ScreenBroadcastListener.ScreenStateListener() {
+            @Override
+            public void onScreenOn() {
+                screenManager.finishActivity();
+            }
+
+            @Override
+            public void onScreenOff() {
+                screenManager.startActivity();
+            }
+        });
+        return START_REDELIVER_INTENT;
+    }
+}
+```
+
+　　MainActivity 在 onCreate 中关闭服务，在 onDestory 中开启服务：
+
+```java
+public class MainActivity extends AppCompatActivity {
+
+    private LiveService service;
+
+    @Override
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        setContentView(R.layout.activity_main);
+        Intent intent = new Intent(this, LiveService.class);
+        stopService(intent);
+    }
+
+
+    @Override
+    protected void onDestroy() {
+        super.onDestroy();
+        Intent intent = new Intent(this, LiveService.class);
+        startService(intent);
+    }
+}
+```
+
+#### 1.4. 查看优先级
+
+![](image/1像素服务线程保活.png)
+
+　　可以看到在按 back 键之后，Service 被开启，主应用的优先级提升。
+
+#### 1.5 守护进程
+
+　　通过上面的操作，主应用就始终和前台进程是一样的优先级了，为了省电，系统检测到锁屏事件后一段时间内会杀死后台进程，如果采取这种方案，就可以避免这个问题。
+
+　　但是还是又被杀掉的可能，所以还需要做双进程守护，关于双进程守护，比较适合的就是 aidl 的那种方式，但是这个不是完全的靠谱，原理是 A 进程死的时候，B 还活着，B 可以将 A 进程拉起来，反之，B 进程死的时候，A 还活着，A 可以将 B 拉进来。所以双进程守护的前提是，系统杀进程只能一个一个的去杀，如果一次性杀两个，这种方法也是不行的。
+
+　　在 Android 5.0 之前，在应用退出后，ActivityManagerService 就把主进程给杀死了。但是，在 Android 5.0 以后，在应用退出后，ActivityManagerService 不仅把主进程给杀死，另外把主进程所属的进程组一并杀死，这样一来，由于子进程和主进程在同一进程组，子进程在做的事情，也就停止了。
+
 ### 2. 前台进程
 
 　　原理：对于 API level < 18：调用 startForeground(ID, new Notofication()) ，发送空的 Notification，图标则不会显示。
 
 　　对于 API level >= 18：在需要提优先级的 service A 启动一个 InnerService，两个服务同时 startForeground，且绑定同样的 ID，Stop 掉 InnerService，这样通知栏图标即被移除。
+
+#### 2.1. 代码实现
+
+　　保活服务
+
+```java
+public class KeepLiveService extends Service {
+
+    public static final String TAG = KeepLiveService.class.getSimpleName();
+
+    public static final int NOTIFICATION_ID = 0x11;
+
+    @Nullable
+    @Override
+    public IBinder onBind(Intent intent) {
+        Log.d(TAG, "onBind");
+        throw new UnsupportedOperationException("Not yet implemented");
+    }
+
+    @Override
+    public void onCreate() {
+        Log.d(TAG, "onCreate");
+        super.onCreate();
+        // API 18 以下，直接发送 Notification 并将其置为前台
+        if (Build.VERSION.SDK_INT < Build.VERSION_CODES.JELLY_BEAN_MR2) {
+            startForeground(NOTIFICATION_ID, new Notification());
+        } else {
+            // API 18 以上，发送 Notification 并将其置为前台后，启动 InnerService
+            Notification.Builder builder = new Notification.Builder(this);
+            builder.setSmallIcon(R.mipmap.ic_launcher);
+            startForeground(NOTIFICATION_ID, builder.build());
+            startService(new Intent(this, InnerService.class));
+        }
+    }
+
+    public class InnerService extends Service {
+        public final String TAG = InnerService.class.getSimpleName();
+
+        @Nullable
+        @Override
+        public IBinder onBind(Intent intent) {
+            Log.d(TAG, "onBind");
+            return null;
+        }
+
+        @Override
+        public void onCreate() {
+            Log.d(TAG, "onCreate");
+            super.onCreate();
+            // 发送与 KeepLiveService 中 ID 相同的 Notification，然后将其取消自己的前台显示
+            Notification.Builder builder = new Notification.Builder(this);
+            builder.setSmallIcon(R.mipmap.ic_launcher);
+            startForeground(NOTIFICATION_ID, builder.build());
+            new Handler().postDelayed(new Runnable() {
+                @Override
+                public void run() {
+                    stopForeground(true);
+                    NotificationManager manager = (NotificationManager) getSystemService(NOTIFICATION_SERVICE);
+                    manager.cancel(NOTIFICATION_ID);
+                    stopSelf();
+                }
+            }, 100);
+        }
+    }
+}
+
+```
+
+　　在 MainActivity 的使用:
+
+```java
+public class MainActivity extends AppCompatActivity {
+
+    private LiveService service;
+
+    @Override
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        setContentView(R.layout.activity_main);
+        Intent intent = new Intent(this, KeepLiveService.class);
+        startService(intent);
+    }
+}
+```
+
+　　在 AndroidManifest.xml 中注册:
+
+```xml
+<service android:name=".KeepLiveService" />
+```
+
+#### 2.2. 查看优先级
+
+![](image/前台进程保活.png)
+
+　　在没有采取前台服务之前，启动应用，oom_adj 的值为 0，按下返回键之后，变为 9，采取前台服务之后，按下返回键后，进程优先级变为了 2，进程的优先级有所提高。
 
 ### 3. 相互唤醒
 
@@ -162,6 +551,8 @@
 ### 4. JobSheduler
 
 　　JobSheduler 是作为进程死后复活的一种手段，native 进程方式最大缺点是费电，Native 进程费电的原因是感知主进程是否存活有两种实现方式，在 Native 进程中通过死循环或定时器，轮询判断主进程是否存活，当主进程不存活时进行拉活。其次 5.0 以上系统不支持。但是 JobScheduler 可以替代在 Android 5.0 以上 native 进程方式，这种方式即使用户强制关闭，也能被拉起来。
+
+
 
 ### 5. 粘性服务 & 系统服务绑定
 
