--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -98,10 +98,12 @@
 
 1. Android
    * ContentProvider
-   * Handle、Message、Looper - 3月
+   * JobService 、JobSheduler
+   * Handle、Message、Looper 
    * Binder
    * Intent
-   * 进程保活- 守护进程 - 3月
+   * IntentFilter
+   * 进程保活- 守护进程 
    * 优化
    * AsyncTask
    * 事件分发机制
@@ -112,7 +114,7 @@
    * 屏幕适配
    * 缓存机制
    * 多线程通信
-   * Fragment - 已完成 3月
+   * Fragment - 已完成
 2. 开源库
    * Glide
    * RxJava
@@ -124,8 +126,8 @@
    * XWalkView
    * 插件化
    * 热修复
-   * Retrofit 源码分析 - 已完成 3 月
-   * OkHttp - 已完成 3月
+   * Retrofit 源码分析 - 已完成
+   * OkHttp - 已完成
    * RabbitMQ - 已完成
 3. 网络
    * 计算机网络知识基础
@@ -143,8 +145,8 @@
    * ReentrantLock
    * Condition
    * 动态代理类 Proxy
-   * volatile - 数据从主内存直接获取 - 已完成 3月
-   * synchronized - 同步 - 已完成 3月
+   * volatile - 数据从主内存直接获取 - 已完成
+   * synchronized - 同步 - 已完成
 5. 数据结构
    * 链表与队列
    * 树
@@ -153,7 +155,7 @@
    * 查找算法
 6. 其他
    * Gradle
-   * 责任链模式 - 完成 3月
+   * 责任链模式 - 完成
 
 ## 后续
 
