--- a/Android/components/守护进程.md
+++ b/Android/components/守护进程.md
@@ -1,8 +1,10 @@
-# 进程保活
+# 守护进程
 
 ## 1. 进程的知识
 
 　　每一个 Android 应用启动后至少对应一个进程，有的是多个进程，而且主流应用中多个进程的应用比例较大。
+
+　　守护进程：一直在后台运行的进程。
 
 ### 1.1. 如何查看进程的基本信息
 
@@ -122,19 +124,28 @@
 
 　　app 退到后台时，其所有的进程优先级都会降低。但是 UI 进程是降低最为明显的，因为它占用的内存资源最多，系统内存不足的时候肯定优先先杀这些占用内存高的进程来腾出资源。所以，为了尽量避免后台 UI 进程被杀，需要尽可能地释放一些不用地资源，尤其是图片、音视频之类的。
 
-## 2. 进程保活方案
+## 2. 守护进程方案
 
-### 2.1 进程保活手段的分类
+### 2.1 守护进程方案
 
-　　当前业界的 Andriod 进程保活手段主要分为 **黑**、**白**、**灰**三种，其大致的实现思路如下：
+　　守护进程的实现思想分为两方面：
+
+1. 保活。通过提高进程优先级，降低进程被杀死的概率。
+2. 拉起。进程被杀死后，进行拉起。
+
+　　当前业界的 Andriod 进程保活手段主要分为 **黑**、**白**、**灰**三种，守护进程的实现方法如下：
 
 * 黑色保活：不同的 app 进程，用广播相互唤醒（包括利用系统提供的广播进行唤醒）。
-* 白色保活：启动前台 Service。
+* 白色保活：通过启动前台 Service 使得进程优先级提高到前台进程。
 * 灰色保活：利用系统的漏洞启动前台 Service。
+* 双进程守护：两个进程互相拉起。
+* JobService 轮询：定时检测拉起。
 
 #### 2.1.1. 黑色保活
 
 　　所谓黑色保活，就是利用不同的 app 进程使用广播来进行相互唤醒。
+
+　　适用对象：腾讯系全家桶、阿里系全家桶、应用之间互相拉起。
 
 　　举 3 个比较常见的场景：
 
@@ -150,6 +161,10 @@
 
 　　比如 LBE 和 QQ 音乐就是这样。
 
+　　优点：写法简单、处理方便。
+
+　　缺点：前台服务和通知绑定在一起，意味着开启服务要伴随一条通知再通知栏，用户有感知。
+
 #### 2.1.3. 灰色保活
 
 　　灰色保活，这种保活手段是应用范围最广泛。
@@ -164,7 +179,33 @@
 
 　　使用灰色保活并不代表 Service 就永久不死了，只能说是提高了进程的优先级。如果 app 进程占用了大量的内存，按照回收进程的策略，同样会干掉 app。
 
-### 2.2. 具体的进程保活方案
+　　优点：开启前台服务的情况下，可以去掉通知，使得用户无感知。
+
+　　缺点：target26 8.0 以上的系统该漏洞已修复，因此不适用。
+
+#### 2.1.4. 双进程守护
+
+　　所谓双进程守护，就是指两个进程互相监视，一旦有一个进程死了，另一个进程监听到就拉起。
+
+　　依托这个原理，衍生出的双进程守护的方案有很多，比如利用监听 socket 连接中断实现，利用文件锁实现，利用 android 的绑定服务实现。
+
+　　以服务绑定为例：
+
+```java
+context.bindService(intent, serviceConnection, flag);
+```
+
+　　这里的 serviceconnection 就是监听回调，回调中有 onServiceConnected 方法和 onServiceDisconnected 这两个方法，通过 onServiceDisconnected 可以监听到另一个服务是否还存活。把两个服务放在两个进程就能够做到监听并拉起进程。
+
+#### 2.1.5. JobService
+
+　　通过定时触发任务，判定进程是否存活，如果不存活了，则拉起。
+
+　　优点：5.0 以后出现的 JobService 是官方推荐的方式，比较稳定。
+
+　　缺点：触发时机不够实时，JobService 的触发时机回事充电时，闲暇时等特殊时机或者时周期性运行。
+
+### 2.2. 具体的守护方案
 
 #### 2.2.1. 开启一个像素的 Activity
 
@@ -362,7 +403,7 @@ public class MainActivity extends AppCompatActivity {
 
 ##### 2.2.1.2. 查看优先级
 
-![](image/1像素线程保活.png)
+![](image/一个像素进程保活.png)
 
 　　开启一个像素的 Activity 后，按 back 键并屏保后，进程的优先级与前台进程的优先级一样。
 
@@ -434,17 +475,11 @@ public class MainActivity extends AppCompatActivity {
 
 ##### 2.2.1.4. 查看优先级
 
-![](image/1像素服务线程保活.png)
+![](image/一个像素服务进程保活.png)
 
 　　可以看到在按 back 键之后，Service 被开启，主应用的优先级和前台进程的优先级一样。
 
-##### 2.2.1.5 守护进程
-
 　　通过上面的操作，主应用就始终和前台进程是一样的优先级了，为了省电，系统检测到锁屏事件后一段时间内会杀死后台进程，如果采取这种方案，就可以避免这个问题。
-
-　　但是还是又被杀掉的可能，所以还需要做双进程守护，关于双进程守护，比较适合的就是 aidl 的那种方式，但是这个不是完全的靠谱，原理是 A 进程死的时候，B 还活着，B 可以将 A 进程拉起来，反之，B 进程死的时候，A 还活着，A 可以将 B 拉进来。所以双进程守护的前提是，系统杀进程只能一个一个的去杀，如果一次性杀两个，这种方法也是不行的。
-
-　　在 Android 5.0 之前，在应用退出后，ActivityManagerService 就把主进程给杀死了。但是，在 Android 5.0 以后，在应用退出后，ActivityManagerService 不仅把主进程给杀死，另外把主进程所属的进程组一并杀死，这样一来，由于子进程和主进程在同一进程组，子进程在做的事情，也就停止了。
 
 #### 2.2.2. 前台进程
 
@@ -554,13 +589,83 @@ public class MainActivity extends AppCompatActivity {
 
 　　像友盟、信鸽这种推送 SDK，也存在唤醒 app 的功能。
 
-#### 2.2.4. JobSheduler
+#### 2.2.4. JobScheduler
 
-　　JobSheduler 是作为进程死后复活的一种手段。
+　　Android 系统在 5.x 以上版本提供了一个 JobScheduler 接口，系统会根据自己实现定时去调用该接口传递的进程去实现一些操作，而且这个接口在被强制停止后依然能够正常的启动，不过在一些国产设备上可能无效，比如小米。
 
-　　Native 进程方式最大缺点是费电，Native 进程费电的原因是需要在 Native 进程中通过死循环、定时器或轮询判断主进程是否存活，当主进程不存活时进行拉活。其次 5.0 以上系统不支持。
+##### 2.2.4.1. 代码实现
 
-　　但是 JobScheduler 可以替代在 Android 5.0 以上 native 进程方式，这种方式即使用户强制关闭，也能被拉起来。
+　　JobService 类：
+
+```java
+@TargetApi(Build.VERSION_CODES.LOLLIPOP)
+public class MyJobService extends JobService {
+    @Override
+    public void onCreate() {
+        super.onCreate();
+        startJobScheduler();
+    }
+
+    public void startJobScheduler() {
+        // 开启 JobScheduler
+        JobInfo.Builder builder = new JobInfo.Builder(1, new ComponentName(getPackageName(), MyJobService.class.getName()));
+        builder.setPeriodic(5);
+        builder.setPersisted(true);
+        JobScheduler jobScheduler = (JobScheduler) getSystemService(Context.JOB_SCHEDULER_SERVICE);
+        jobScheduler.schedule(builder.build());
+    }
+
+    @Override
+    public boolean onStartJob(JobParameters params) {
+        return false;
+    }
+
+    @Override
+    public boolean onStopJob(JobParameters params) {
+        return false;
+    }
+}
+```
+
+　　在 AndroidManifest.xml 中声明 JobService：
+
+```xml
+<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+   <application ...>
+       	<service
+         android:name=".MyJobService"
+         android:exported="true"
+         android:permission="android.permission.BIND_JOB_SERVICE" />
+   </application>
+```
+
+　　在 MainActivity 中启动 MyJobService：
+
+```java
+public class MainActivity extends AppCompatActivity {
+
+    @Override
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        setContentView(R.layout.activity_main);
+        // 启动 MyJobService
+        Intent intent = new Intent(this, MyJobService.class);
+        startService(intent);
+    }
+
+
+    @Override
+    protected void onDestroy() {
+        super.onDestroy();
+    }
+}
+```
+
+##### 2.2.4.2. 运行结果
+
+![](image/JobScheduler进程保活.png)
+
+　　打开其他应用后，会将程序的进程杀死，之后发现会重新将本应用拉起。
 
 #### 2.2.5. 粘性服务 & 系统服务绑定
 
@@ -582,7 +687,175 @@ public class MainActivity extends AppCompatActivity {
 
   START_STICKY 的兼容版本，不同的是其不保证服务被杀后一定能重启。
 
-#### 2.2.6. 其他
+#### 2.2.6. 双进程守护
+
+　　双进程守护的思想就是：两个进程共同运行，如果有其中一个进程被杀，那么另一个进程就会将被杀的进程重新拉起，相互保护，在一定的意义上，维持进程的不断运行。
+
+　　双进程守护的两个进程，一个进程用于应用所需的后台操作，且叫它本地进程，另一个进程只负责监听着本地进程的状态，再本地进程被杀的时候拉起，与此同时本地进程也在监听着这个进程，准备在它被杀时拉起，将这个进程称为远端进程。
+
+　　所以双进程守护的前提是，系统杀进程只能一个一个的去杀，如果一次性杀两个，这种方法也是不行的。
+
+　　在 Android 5.0 之前，在应用退出后，ActivityManagerService 就把主进程给杀死了。但是，在 Android 5.0 以后，在应用退出后，ActivityManagerService 不仅把主进程给杀死，另外把主进程所属的进程组一并杀死，这样一来，由于子进程和主进程在同一进程组，子进程在做的事情，也就停止了。
+
+##### 2.2.6.1. 代码实现
+
+　　本地服务，就是需要在应用中处理逻辑的服务：
+
+```java
+public class LocalService extends Service {
+
+    public static final String TAG = LocalService.class.getSimpleName();
+
+    @Nullable
+    @Override
+    public IBinder onBind(Intent intent) {
+        Log.d(TAG, "onBind");
+        throw new UnsupportedOperationException("Not yet implemented");
+    }
+
+    @Override
+    public int onStartCommand(Intent intent, int flags, int startId) {
+        Log.d(TAG, "onStartCommand");
+        startAndBindRemoteService();
+        return super.onStartCommand(intent, flags, startId);
+    }
+	// 启动并绑定服务
+    private void startAndBindRemoteService() {
+        Log.d(TAG, "startAndBindRemoteService");
+        Intent intent = new Intent(this, RemoteService.class);
+        startService(intent);
+        bindService(intent, new LocalServiceConnection(), Context.BIND_IMPORTANT);
+    }
+	// 绑定的回调
+    private class LocalServiceConnection implements ServiceConnection {
+        public final String TAG = LocalServiceConnection.class.getSimpleName();
+
+        @Override
+        public void onServiceConnected(ComponentName name, IBinder service) {
+            Log.d(TAG, "onServiceConnected");
+        }
+
+        @Override
+        public void onServiceDisconnected(ComponentName name) {
+            Log.d(TAG, "onServiceDisconnected");
+            startAndBindRemoteService();
+        }
+    }
+}
+```
+
+　　负责拉起服务的服务：
+
+```java
+@TargetApi(Build.VERSION_CODES.LOLLIPOP)
+public class RemoteService extends JobService {
+
+    private static final String TAG = RemoteService.class.getSimpleName();
+
+    @Override
+    public int onStartCommand(Intent intent, int flags, int startId) {
+        Log.d(TAG, "onStartCommand");
+        return super.onStartCommand(intent, flags, startId);
+    }
+
+    @Override
+    public boolean onStartJob(JobParameters params) {
+        Log.d(TAG, "onStartJob");
+        JobInfo.Builder builder = new JobInfo.Builder(1, new ComponentName(this, RemoteService.class));
+        builder.setPeriodic(2000);
+        JobInfo jobInfo = builder.build();
+        JobScheduler jobScheduler = (JobScheduler) getSystemService(Context.JOB_SCHEDULER_SERVICE);
+        jobScheduler.schedule(jobInfo);
+        return false;
+    }
+
+    @Override
+    public boolean onStopJob(JobParameters params) {
+        Log.d(TAG, "onStopJob");
+        // 在本服务停止时，检查 LocalService 是否存活，不存活就启动 LocalService
+        boolean isServiceWork = isServiceWork(this, LocalService.class.getName());
+        Log.d(TAG, "onStopJob isServiceWork:" + isServiceWork);
+        if (!isServiceWork) {
+            startService(new Intent(this, LocalService.class));
+        }
+        return false;
+    }
+
+    @Override
+    public void onCreate() {
+        Log.d(TAG, "onCreate");
+        super.onCreate();
+    }
+
+    @Override
+    public void onDestroy() {
+        Log.d(TAG, "onDestroy");
+        super.onDestroy();
+    }
+
+    public boolean isServiceWork(Context context, String serviceName) {
+        if (TextUtils.isEmpty(serviceName)) {
+            return false;
+        }
+        boolean isWork = false;
+        ActivityManager am = (ActivityManager) context.getSystemService(Context.ACTIVITY_SERVICE);
+        List<ActivityManager.RunningServiceInfo> serviceList = am.getRunningServices(100);
+        if (serviceList == null || serviceList.size() <= 0) {
+            return false;
+        }
+        for (int i = 0; i < serviceList.size(); i++) {
+            String name = serviceList.get(i).service.getClassName();
+            if (serviceName.equals(name)) {
+                isWork = true;
+                break;
+            }
+        }
+        return isWork;
+    }
+}
+```
+
+　　RemoteService 继承 JobService ，可以使得服务在被强制停止后再度启动起来，启动起来之后，就会将 LocalService 拉活。
+
+　　在 AndroidManifest.xml 中声明服务：
+
+```java
+        <service android:name=".LocalService" />
+        <service
+            android:name=".RemoteService"
+            android:exported="true"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+```
+
+　　在 MainActivity 中启动服务：
+
+```java
+        Intent intent = new Intent(this, LocalService.class);
+        startService(intent);
+```
+
+##### 2.2.6.2. 运行结果
+
+　　打开应用，后查看本程序中的服务和 Activities：
+
+![](image/双进程守护.png)
+
+　　可以看到两个服务是绑定在一起的。createFromFg 代表该服务是前台服务。
+
+　　退出应用后，乱点一些其他应用，在 Android Studio 上看到程序线程被杀死，再次查看程序中的服务和 Activities：
+
+![](image/双进程守护应用进程被杀死后.png)
+
+　　可以看到两个服务被重启，并绑定在一起。
+
+##### 2.2.6.3. 优化
+
+　　在双进程守护的方案上还可以根据其他的实现方案进行优化：
+
+1. 将 LocalService 设置为前台进程，提供它的优先级，减少被杀死的可能性。
+2. 将 RemoteService 放在单独的一个线程，减少占用主程序的内存。
+
+#### 2.2.7. 其他
 
 　　NotificationListenerService 就是一个监听通知的服务，只要手机收到了通知，NotificationListenerService 都能监听到，即使用户把进程杀死，也能重启。
 
